Wed Jun  4 10:15:04 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/vc14nmake.mpb:
          vc14 has removed support for /Wp64

Wed Jun  4 10:09:44 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-msvc-11.h:
        * ace/config-win32-msvc-12.h:
        * ace/config-win32-msvc-14.h:
        * ace/config-win32-msvc.h:
          Addec config files for msvc10/12/14, they just include the
          config file of the previous msvc version, makes it easier to
          add specific settings for specific msvc versions

Wed Jun  4 09:38:43 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/vc14nmake.mpb:
          New file for msvc14

Thu May 22 18:40:24 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Dev_Poll_Reactor.cpp:
          Fixed compile warning in single threaded build

Thu May 22 11:48:35 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Message_Queue_Test.cpp:
          Fix gcc 4.9 warning

Thu May 22 10:21:13 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_g++_common.GNU:
          Some make versions don't look to like my nested construct

Thu May 22 07:51:53 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-g++-common.h:
          Set ACE_HAS_CPP14 when we __cplusplus is larger than
          201103L

Wed May 21 12:58:27 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_android.GNU:
          Fix typo in comment

Wed May 21 09:49:45 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_g++_common.GNU:
          Added support for c++11 and c++1y as settings

Tue May  6 09:25:03 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
          Changed ACE_Init_Test to require MFC in the test config
